Fixed the alignments on image and text in contacts(footer)

--- a/css/styles.css
+++ b/css/styles.css
@@ -49,20 +49,49 @@
   background-color: #274266;
 }
 
+.footer-icon {
+    height: 20px;
+    width: 20px;
+    margin-right: 35px;
+    margin-top: 15px;
+}
+
 .bio-box {
   border: 1px solid #000;
   float: left;
   font-size: 1rem;
   padding: 2%;
-  width: 25%;
+  width: 20%;
 }
 
-.bio-box h3 {
+.bio-box1 {
+    border: 1px solid #000;
+    float: left;
+    font-size: 1rem;
+    padding: 2%;
+    width: 30%;
+  }
+
+.bio-wrapper h3 {
     color: white;
+  }
+
+  .bio-wrapper li {
+    color: lightgray;
+    list-style-type: none;
   }
 
 .bio-wrapper {
   font-size: 24px;
   height: 300px;
   overflow: scroll;
+}
+
+.bio-wrapper:after {
+    visibility: hidden;
+    display: block;
+    font-size: 0;
+    content: " ";
+    clear: both;
+    height: 0;
 }
